--- a/index.html
+++ b/index.html
@@ -384,9 +384,9 @@
                         alt="" class="profile-image">
                      <div class="gap-24"></div>
                      <h2>
-                     I’ve tried so many fitness apps, but Arthlete is on another level. The real-time posture correction actually helped me fix my form — I didn’t even realize how off it was before. And the evolving 3D avatar? Total game-changer. Seeing my avatar get fitter as I stay active keeps me so motivated. I never thought I’d look forward to working out every day — now I do
+                     I’ve tried so many fitness apps, but Arthlete is on another level.The real-time posture correction actually helped me fix my form — I didn’t even realize how off it was before. And the evolving 3D avatar? Total game-changer. Seeing my avatar get fitter as I stay active keeps me so motivated. I never thought I’d look forward to working out every day — now I do
                      <div class="gap-8"></div>
-                     <p>Dhruv Sidhpura</p>
+                     <p>==Dhruv Sidhpura</p>
                   </div>
                </div>
             </div>
@@ -632,7 +632,7 @@
                               </div>
                            </div>
                            <div style="width:100%;height:0px" class="faq1_answer">
-                              <p>YAbsolutely. Your data is encrypted and never sold or shared without your consent. You're always in control of your information.</p>
+                              <p>Absolutely. Your data is encrypted and never sold or shared without your consent. You're always in control of your information.</p>
                               <div class="spacer-small"></div>
                            </div>
                         </div>
