--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                      <h2>
                      I’ve tried so many fitness apps, but Arthlete is on another level.The real-time posture correction actually helped me fix my form — I didn’t even realize how off it was before. And the evolving 3D avatar? Total game-changer. Seeing my avatar get fitter as I stay active keeps me so motivated. I never thought I’d look forward to working out every day — now I do
                      <div class="gap-8"></div>
-                     <p>==Dhruv Sidhpura</p>
+                     <p>-Dhruv Sidhpura</p>
                   </div>
                </div>
             </div>
