--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
          content="Arthlete is a smart personal training app powered by AI. It helps you get in shape and stay in shape."
          property="og:description">
       <meta content="images/681b7f4a8513f235556b0e8d_Opengraph.png" property="og:image">
-      <meta content="Debtfindr - Smart debt resolution powered by AI — finally, all in one app." property="twitter:title">
+      <meta content="Arthlete – Smart AI Home Fitness Platform" property="twitter:title">
       <meta
-         content="Find out exactly what you owe — and let our intelligent assistant help you negotiate a better way forward."
+         content="Join Arthlete – AI-powered workouts, motion tracking, and real-time form correction at home. Smarter fitness for every body."
          property="twitter:description">
       <meta property="og:type" content="website">
       <meta content="summary_large_image" name="twitter:card">
@@ -119,8 +119,8 @@
                         <div class="gap-24"></div>
                         <h2 class="text-center">Thanks for joining our waitlist!</h2>
                         <div class="gap-24"></div>
-                        <div>Help others take control of their financial future too!<br>Share this service with friends and
-                           family who might be struggling with debt uncertainty—sometimes the greatest gift is clarity. 
+                        <div> Help others take control of their fitness journey too!<br>
+  Share Arthlete with friends and family looking to train smarter — because better form means faster progress.
                         </div>
                      </div>
                      <div class="w-form-fail">
@@ -194,7 +194,7 @@
                      </div>
                      <div class="gap-32"></div>
                      <div class="content-center v-f">
-                        <a href="#scan" class="button attention w-inline-block">
+                        <a href="https://forms.gle/RHsTMRrQkHoToqxXA" class="button attention w-inline-block">
                            <div class="svg-flex w-embed">
                               <svg width="21" height="20" viewBox="0 0 21 20" fill="none"
                                  xmlns="http://www.w3.org/2000/svg">
@@ -384,9 +384,9 @@
                         alt="" class="profile-image">
                      <div class="gap-24"></div>
                      <h2>
-                     I’ve tried so many fitness apps, but Arthlete is on another level.The real-time posture correction actually helped me fix my form — I didn’t even realize how off it was before. And the evolving 3D avatar? Total game-changer. Seeing my avatar get fitter as I stay active keeps me so motivated. I never thought I’d look forward to working out every day — now I do
+                     I’ve tried so many fitness apps, but Arthlete is on another level. The real-time posture correction actually helped me fix my form — I didn’t even realize how off it was before. And the evolving 3D avatar? Total game-changer. Seeing my avatar get fitter as I stay active keeps me so motivated. I never thought I’d look forward to working out every day — now I do
                      <div class="gap-8"></div>
-                     <p>-Dhruv Sidhpura</p>
+                     <p>Dhruv Sidhpura</p>
                   </div>
                </div>
             </div>
@@ -421,7 +421,7 @@
                         </p>
                         <div class="gap-32"></div>
                         <div class="content-center v-f left">
-                           <a href="#scan" class="button attention w-inline-block">
+                           <a href="https://forms.gle/RHsTMRrQkHoToqxXA" class="button attention w-inline-block">
                               <div class="svg-flex w-embed">
                                  <svg width="21" height="20" viewBox="0 0 21 20" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -509,7 +509,7 @@
                         <p>Form better routines, improve sleep, manage stress, and stay mentally strong</p>
                         <div class="gap-32"></div>
                         <div class="content-center v-f left">
-                           <a href="#scan" class="button attention w-inline-block">
+                           <a href="https://forms.gle/RHsTMRrQkHoToqxXA" class="button attention w-inline-block">
                               <div class="svg-flex w-embed">
                                  <svg width="21" height="20" viewBox="0 0 21 20" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -632,7 +632,7 @@
                               </div>
                            </div>
                            <div style="width:100%;height:0px" class="faq1_answer">
-                              <p>Absolutely. Your data is encrypted and never sold or shared without your consent. You're always in control of your information.</p>
+                              <p>YAbsolutely. Your data is encrypted and never sold or shared without your consent. You're always in control of your information.</p>
                               <div class="spacer-small"></div>
                            </div>
                         </div>
@@ -750,7 +750,7 @@
                      </div>
                      <div class="gap-32"></div>
                      <div class="content-center v-f">
-                        <a href="#scan" class="button attention w-inline-block">
+                        <a href="https://linktr.ee/arthlete" class="button attention w-inline-block">
                            <div class="svg-flex w-embed">
                               <svg width="21" height="20" viewBox="0 0 21 20" fill="none"
                                  xmlns="http://www.w3.org/2000/svg">
@@ -759,7 +759,7 @@
                                     fill="white"></path>
                               </svg>
                            </div>
-                           <div>Join our waitlist</div>
+                           <div>Follow us </div>
                         </a>
                      </div>
                   </div>
